--- a/config/default.nginx.conf
+++ b/config/default.nginx.conf
@@ -1,11 +1,12 @@
 server {
+    # listen on port 80
     listen 80;
     server_name localhost;
-
+    # redirect all requests to http
     root   /var/www/html;
     index index.html index.htm;
     error_page   500 502 503 504  /50x.html;
-
+    # redirect server page to react client page
     location / {
         proxy_pass http://client:3000;
     }
