--- a/Dockerfile.client
+++ b/Dockerfile.client
@@ -1,7 +1,13 @@
+#using node 16 base image as it is compatible with the version of react used the application
 FROM node:16-alpine
+#set working directory
 WORKDIR /app
+#copy package.json and package-lock.json to the working directory
 COPY sys-stats/package.json sys-stats/yarn.lock ./
+#copy the client folder to the working directory
 COPY sys-stats/src ./src
 COPY sys-stats/public ./public
+#install node dependencies
 RUN npm i
+#build the react application
 CMD ["npm", "run", "start"]
