--- a/Dockerfile.proxy
+++ b/Dockerfile.proxy
@@ -1,2 +1,4 @@
+#using latest nginx image
 FROM nginx:stable-alpine
+#copy nginx configuration file to the nginx configuration directory on the container
 COPY config/default.nginx.conf /etc/nginx/conf.d/default.conf
