--- a/Docker-compose.yml
+++ b/Docker-compose.yml
@@ -1,4 +1,5 @@
 # spinning up api client and proxy services
+version: "3.1"
 services:
 # api service (api service provides cpu and ram data to the api client)
   api:
